[tool.poetry]
name = "hadoop-client"
version = "0.1.0"
description = "Hadoop client for BigData"
authors = ["LuchnikKek <ilua.kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
